@@ -1052,6 +1052,7 @@ LISPSYM(random,"RANDOM",lisp)
 LISPSYM(make_random_state,"MAKE-RANDOM-STATE",lisp)
 LISPSYM(fakultaet,"!",ext)
 LISPSYM(exquo,"EXQUO",ext)
+LISPSYM(mod_expt,"MOD-EXPT",ext)
 LISPSYM(long_float_digits,"LONG-FLOAT-DIGITS",ext)
 LISPSYM(set_long_float_digits,"%SET-LONG-FLOAT-DIGITS",system)
 LISPSYM(log2,"LOG2",system)
