@@ -1167,6 +1167,7 @@ LISPFUN(random,seclass_default,1,1,norest,nokey,0,NIL)
 LISPFUN(make_random_state,seclass_default,0,1,norest,nokey,0,NIL)
 LISPFUNNF(fakultaet,1)
 LISPFUNNF(exquo,2)
+LISPFUNNF(mod_expt,3)
 LISPFUNN(long_float_digits,0)
 LISPFUNN(set_long_float_digits,1)
 LISPFUNNR(log2,1)
