@@ -153,3 +153,12 @@ nil
   :unless (= z*2^z (logand z*2^z z*2^z)) :collect (list 'logand z 'z*2^z z*2^z)
   :unless (= z*z (logand z*z z*z)) :collect (list 'logand z 'z*z z*z))
 nil
+
+(mod-expt 1432 634 3456)
+2944
+
+(mod-expt 640785284696442065785559134003308932264708355179002798538113
+          671286301850793527622248679786362012411973295201562077406347
+          541607700526106309999871171548445806906603126622271198261079)
+184927654951560197998922671105024055618160643054333015564836
+
